--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<title>Suboticki Soko</title>
 </head>
 <body>
-	<h1>Ponosno predstavlja...</h1>
+	<h1>Suboticki soko</h1>
+	<h2>Ponosno predstavlja...</h2>
 </body>
 </html>
